# cpp_project_template

./: .gitignore  CMakeLists.txt  LICENSE  buildvs.bat  readme.md  runtest.bat
examples/: CMakeLists.txt  example.cpp  example1.cpp  example1.hpp
test/: CMakeLists.txt  unittest.cpp
